@@ -179,6 +179,9 @@ nx-libs (2:3.5.0.32-0x2go1) UNRELEASED; urgency=low
   * Security fixes:
     - X.Org CVE-2015-3418:
       1210-CVE-2015-3418-dix-Allow-zero-height-PutImage-re.full.patch
+  * debian/roll-tarball.sh:
+    + Make sure *.keyboard, debian/**, nx-libs.spec, .pc/** don't end up
+      in tarball (special focuse on the nx-libs-lite tarball).
 
   [ Nito Martinez ]
   * nxcomp: fix DEBUG, TEST, DUMP, FLUSH, TOKEN, PING, MIXED et al builds.
